Update LCLI.bat